--- a/forms/form_validation1/index.html
+++ b/forms/form_validation1/index.html
@@ -13,6 +13,7 @@
 <body>
   <h1>Sign Up Form</h1>
   <form action="#" method="post" novalidate>
+    <p class="form_errors"></p>
     <fieldset>
       <dl>
         <dt><label for="first_name">First Name</label></dt>
@@ -30,16 +31,23 @@
         <dt><label for="email">Email Address</label></dt>
         <dd>
           <input type="email" name="email" id="email"
-            placeholder="you@example.com" required />
+            placeholder="you@example.com" pattern=".+@.+" required />
+          <span class="error_message"></span>
         </dd>
 
         <dt><label for="password">Password</label></dt>
-        <dd><input type="password" name="password" id="password" required />
+        <dd>
+          <input type="password" name="password" id="password" minLength="10"
+            required />
+          <span class="error_message"></span>
         </dd>
 
         <dt><label for="phone_number">Phone Number</label></dt>
-        <dd><input type="text" name="phone_number" id="phone_number"
-            placeholder="111-222-3333" /></dd>
+        <dd>
+          <input type="text" name="phone_number" id="phone_number"
+            placeholder="111-222-3333" pattern="\d{3}-\d{3}-\d{4}" />
+          <span class="error_message"></span>
+        </dd>
 
         <button type="submit">Sign Up</button>
 
