updating form validation exercises

--- a/forms/form_validation/index.html
+++ b/forms/form_validation/index.html
@@ -49,6 +49,17 @@
           <span class="error_message"></span>
         </dd>
 
+        <dt><label for='credit_card'>Credit Card</label></dt>
+        <dd>
+          <input type="text" name="credit_card" id="cc1" maxLength="4" />
+          <span>--</span>
+          <input type="text" name="credit_card" id="cc2" maxLength="4" />
+          <span>--</span>
+          <input type="text" name="credit_card" id="cc3" maxLength="4" />
+          <span>--</span>
+          <input type="text" name="credit_card" id="cc4" maxLength="4" />
+        </dd>
+
         <button type="submit">Sign Up</button>
 
       </dl>
